Wraps everything in div#wrapper and solves Hamburger menu floating off page.

--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -89,6 +89,7 @@ nav
     width: 100%
     position: fixed
     z-index: 1
+    max-width: 1200px
 
 .nav-container
     margin: 0 auto
