--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,8 +18,12 @@ body
     color: $white
     font-family: $typewriter
     line-height: 1.2em
-    max-width: 1200px
     margin: auto
+    width: 100%
+
+div#wrapper
+    max-width: 1200px
+
 p
     margin-top: 10px
 
